--- a/templates/index.html
+++ b/templates/index.html
@@ -12,17 +12,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="#">創業夥伴網</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-            <form class="navbar-form navbar-right">
+            <form class="navbar-form navbar-right" method="post" action="/login/">
                 <div class="form-group">
-                    <input type="text" placeholder="Email" class="form-control">
+                    <input type="text" name="username" placeholder="Email" class="form-control">
                 </div>
                 <div class="form-group">
-                    <input type="password" placeholder="Password" class="form-control">
+                    <input type="password" name="password" placeholder="Password" class="form-control">
                 </div>
-                <button type="submit" class="btn btn-success">Sign in</button>
+                <button type="submit" class="btn btn-success">登入</button>
             </form>
         </div>
         <!--/.navbar-collapse -->
@@ -33,19 +33,19 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <h1>Hello, world!</h1>
-
+{#        <img src="http://www.stormmediagroup.com/export/sites/stormmedia/DomesticPicUnpublish/201412/sh2014121592014.jpg">#}
         <p>This is a template for a simple marketing or informational website. It includes a large callout
             called a
             jumbotron and three supporting pieces of content. Use it as a starting point to create something
             more
             unique.</p>
 
-        <p><a class="btn btn-lg btn-success" href="/signup" role="button">Sign up today</a></p>
+        <p><a class="btn btn-lg btn-success" href="/signup" role="button">註冊</a></p>
     </div>
 
     <div class="row">
         <div class="col-md-6">
-            <h2>Heading</h2>
+            <h2>找夥伴</h2>
 
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
                 mauris
@@ -53,10 +53,10 @@
                 mollis
                 euismod. Donec sed odio dui. </p>
 
-            <p><a class="btn btn-default" href="/partner" role="button">View details »</a></p>
+            <p><a class="btn btn-default" href="/partner" role="button">更多 »</a></p>
         </div>
         <div class="col-md-6">
-            <h2>Heading</h2>
+            <h2>找事業</h2>
 
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
                 mauris
@@ -64,7 +64,7 @@
                 mollis
                 euismod. Donec sed odio dui. </p>
 
-            <p><a class="btn btn-default" href="/business" role="button">View details »</a></p>
+            <p><a class="btn btn-default" href="/business" role="button">更多 »</a></p>
         </div>
     </div>
 </div>
