--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 {% include "head.html" %}
 <body>
 
@@ -10,36 +10,41 @@
                 Well done! You successfully read this important alert message.
             </div>
             <div class="alert alert-danger alert-dismissible" role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
                 <strong>Warning!</strong> Better check yourself, you're not looking too good.
             </div>
         </div>
         <legend>Registration</legend>
         <div class="row">
             <div class="col-md-4 col-md-offset-3">
-                <form>
+                <form id="register" method="post" action="/add_user/">
+                    {% csrf_token %}
                     <div class="form-group">
                         <label for="userName">Name</label>
-                        <input type="email" class="form-control" id="userName" placeholder="Enter your name">
-                    </div>
-                    <div class="form-group">
-                        <label for="email1">Email address</label>
-                        <input type="email" class="form-control" id="email1" placeholder="Enter email">
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Password</label>
-                        <input type="password" class="form-control" id="password" placeholder="Password">
-                    </div>
-                    <div class="form-group">
-                        <label for="passwordCheck">Ckeck Password</label>
-                        <input type="password" class="form-control" id="passwordCheck" placeholder="Password">
-                    </div>
-                    <div class="control-group">
-                        <label class="control-label" for="input01"></label>
-                        <div class="controls">
-                            <button type="submit" class="btn btn-primary" rel="tooltip" title="first tooltip">Create My Account</button>
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="userName" name="userName" placeholder="Enter your name">
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label for="userEmail">Email address</label>
+                        <div class="input-group">
+                            <input type="email" class="form-control" name="userEmail" placeholder="Enter email">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="pwd">Password</label>
+                        <div class="input-group">
+                            <input type="password" class="form-control" id="pwd" name="pwd" placeholder="Password">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="pwd2">Check Password</label>
+                        <div class="input-group">
+                            <input type="password" class="form-control" name="pwd2" placeholder="Check your password">
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Create My Account</button>
                 </form>
             </div>
         </div>
@@ -51,16 +56,26 @@
         <p>&copy; Srinivas Tamada Production</p>
     </div>
 </footer>
+</body>
+</html>
 
-<script type="text/javascript">
+<script>
     $(document).ready(function () {
-        $('#registerHere input').hover(function () {
-            $(this).popover('show')
-        });
-        $("#registerHere").validate({
+        $('#register').validate({
             rules: {
-                user_name: "required",
-                user_email: {
+                userName:  {
+                    required: true,
+                    remote: {
+                        url: "/check_user_exist",
+                        type: "get",
+                        data: {
+                            userName: function() {
+                                return $( "#userName" ).val();
+                            }
+                        }
+                    }
+                },
+                userEmail: {
                     required: true,
                     email: true
                 },
@@ -68,41 +83,40 @@
                     required: true,
                     minlength: 6
                 },
-                cpwd: {
+                pwd2: {
                     required: true,
                     equalTo: "#pwd"
-                },
-                gender: "required"
+                }
             },
             messages: {
-                user_name: "Enter your first and last name",
-                user_email: {
-                    required: "Enter your email address",
-                    email: "Enter valid email address"
-                },
-                pwd: {
-                    required: "Enter your password",
-                    minlength: "Password must be minimum 6 characters"
-                },
-                cpwd: {
-                    required: "Enter confirm password",
-                    equalTo: "Password and Confirm Password must match"
-                },
-                gender: "Select Gender"
+                userName: {
+                    remote: '使用者帳號已經存在'
+                }
             },
-            errorClass: "help-inline",
-            errorElement: "span",
-            highlight: function (element, errorClass, validClass) {
-                $(element).parents('.control-group').addClass('error');
+            highlight: function (element) {
+                $(element).closest('.form-group').addClass('has-error');
             },
-            unhighlight: function (element, errorClass, validClass) {
-                $(element).parents('.control-group').removeClass('error');
-                $(element).parents('.control-group').addClass('success');
+            unhighlight: function (element) {
+                $(element).closest('.form-group').removeClass('has-error');
+            },
+            errorElement: 'span',
+            errorClass: 'help-block',
+            errorPlacement: function (error, element) {
+                if (element.parent('.input-group').length) {
+                    error.insertAfter(element.parent());
+                } else {
+                    error.insertAfter(element);
+                }
             }
         });
     });
+
+{#    BootstrapDialog.show({#}
+{#        type: BootstrapDialog.TYPE_SUCCESS,#}
+{#        title: 'Message type: ' + type,#}
+{#        message: 'What to do next?',#}
+{#        buttons: [{#}
+{#            label: 'I do nothing.'#}
+{#        }]#}
+{#    });#}
 </script>
-
-</body>
-</html>
-
