--- a/static/sticky-footer.css
+++ b/static/sticky-footer.css
@@ -2,16 +2,27 @@
 -------------------------------------------------- */
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  background-color: #f5f5f5;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    Set the fixed height of the footer here height : 60 px;
+    /*background-color: #444444;*/
+}
+
+#footer {
+    margin-top: 50px;
+    padding: 10px 100px;
+    /*background: #444;*/
+    color: #eee;
+    text-align: right;
+}
+
+#footer a {
+    color: #fff;
 }
 
 .footer > .container {
-  padding-right: 15px;
-  padding-left: 15px;
+    padding-right: 15px;
+    padding-left: 15px;
 }
 
