--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,17 +5,17 @@
 
 <div class="container">
     <div class="row">
-        <div class="span8">
-            <div class="alert alert-success">
-                Well done! You successfully read this important alert message.
-            </div>
-            <div class="alert alert-danger alert-dismissible" role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
-                        aria-hidden="true">&times;</span></button>
-                <strong>Warning!</strong> Better check yourself, you're not looking too good.
-            </div>
-        </div>
-        <legend>Registration</legend>
+{#        <div class="span8">#}
+{#            <div class="alert alert-success">#}
+{#                Well done! You successfully read this important alert message.#}
+{#            </div>#}
+{#            <div class="alert alert-danger alert-dismissible" role="alert">#}
+{#                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span#}
+{#                        aria-hidden="true">&times;</span></button>#}
+{#                <strong>Warning!</strong> Better check yourself, you're not looking too good.#}
+{#            </div>#}
+{#        </div>#}
+        <legend>輸入註冊資料</legend>
         <div class="row">
             <div class="col-md-4 col-md-offset-3">
                 <form id="register" method="post" action="/add_user/">
