--- a/business/templates/business/add_business.html
+++ b/business/templates/business/add_business.html
@@ -44,14 +44,14 @@
                 <label class="radio_buttons optional col-sm-2 control-label">產業</label>
                 <div class="col-sm-10">
                     <select class="string required form-control" name="industry">
-                        <option value="it">資訊科技</option>
-                        <option value="conventional">傳產製造</option>
-                        <option value="industry">工商服務</option>
-                        <option value="catering">餐飲服務</option>
-                        <option value="livelihood">民生服務</option>
-                        <option value="education">文教傳播</option>
-                        <option value="electronic">電子/半導體</option>
-                        <option value="other">其他</option>
+                        <option value="資訊科技">資訊科技</option>
+                        <option value="傳產製造">傳產製造</option>
+                        <option value="工商服務">工商服務</option>
+                        <option value="餐飲服務">餐飲服務</option>
+                        <option value="民生服務">民生服務</option>
+                        <option value="文教傳播">文教傳播</option>
+                        <option value="電子/半導體">電子/半導體</option>
+                        <option value="其他">其他</option>
                     </select>
                 </div>
             </div>
