--- a/business/templates/business/business.html
+++ b/business/templates/business/business.html
@@ -15,16 +15,16 @@
 {% block content %}
     <h1 class="page-header">事業</h1>
     <div class="row">
-        <div class="col-sm-9 col-lg-8 ">
-            <form accept-charset="UTF-8" action="/jobs/search" class="jobs-search-form" method="get">
+        <div class="col-sm-9 col-lg-8 col-lg-offset-1">
+            <form accept-charset="UTF-8" action="/business/search" method="get">
                 <div style="display:none"><input name="utf8" type="hidden" value="✓"></div>
                 <div class="input-group">
                     <input type="text" class="form-control" name="q" value="" placeholder="搜尋事業關鍵字...">
-        <span class="input-group-btn">
-          <button type="submit" class="btn btn-default">
-              <span class="glyphicon glyphicon-search"></span>
-          </button>
-        </span>
+                    <span class="input-group-btn">
+                      <button type="submit" class="btn btn-default">
+                          <span class="glyphicon glyphicon-search" style="font-size: 20px"></span>
+                      </button>
+                    </span>
                 </div>
             </form>
         </div>
@@ -32,130 +32,31 @@
             <a class="btn btn-primary btn-block" data-remote="true" href="/business/add_business/">發表一個偉大的計畫</a>
         </div>
     </div>
+
     <div class="table-responsive">
         <table class="table table-striped">
             <thead>
             <tr>
-                <th>#</th>
-                <th>Header</th>
-                <th>Header</th>
-                <th>Header</th>
-                <th>Header</th>
+                <th>標題</th>
+                <th>產業</th>
+                <th>地點</th>
+                <th>發佈時間</th>
             </tr>
             </thead>
             <tbody>
+            {% for biz in biz_list%}
             <tr>
-                <td>1,001</td>
-                <td>Lorem</td>
-                <td>ipsum</td>
-                <td>dolor</td>
-                <td>sit</td>
+                <td width="75%">
+                    {% if biz.was_published_recently %}
+                        <span class="label label-success">NEW</span>
+                    {% endif %}
+                    <a href="/business/biz_detail?id={{ biz.pk }}">{{ biz.title }}</a>
+                </td>
+                <td width="5%">{{ biz.industry }}</td>
+                <td width="5%">{{ biz.location }}</td>
+                <td width="15%">{{ biz.pub_date }}</td>
             </tr>
-            <tr>
-                <td>1,002</td>
-                <td>amet</td>
-                <td>consectetur</td>
-                <td>adipiscing</td>
-                <td>elit</td>
-            </tr>
-            <tr>
-                <td>1,003</td>
-                <td>Integer</td>
-                <td>nec</td>
-                <td>odio</td>
-                <td>Praesent</td>
-            </tr>
-            <tr>
-                <td>1,003</td>
-                <td>libero</td>
-                <td>Sed</td>
-                <td>cursus</td>
-                <td>ante</td>
-            </tr>
-            <tr>
-                <td>1,004</td>
-                <td>dapibus</td>
-                <td>diam</td>
-                <td>Sed</td>
-                <td>nisi</td>
-            </tr>
-            <tr>
-                <td>1,005</td>
-                <td>Nulla</td>
-                <td>quis</td>
-                <td>sem</td>
-                <td>at</td>
-            </tr>
-            <tr>
-                <td>1,006</td>
-                <td>nibh</td>
-                <td>elementum</td>
-                <td>imperdiet</td>
-                <td>Duis</td>
-            </tr>
-            <tr>
-                <td>1,007</td>
-                <td>sagittis</td>
-                <td>ipsum</td>
-                <td>Praesent</td>
-                <td>mauris</td>
-            </tr>
-            <tr>
-                <td>1,008</td>
-                <td>Fusce</td>
-                <td>nec</td>
-                <td>tellus</td>
-                <td>sed</td>
-            </tr>
-            <tr>
-                <td>1,009</td>
-                <td>augue</td>
-                <td>semper</td>
-                <td>porta</td>
-                <td>Mauris</td>
-            </tr>
-            <tr>
-                <td>1,010</td>
-                <td>massa</td>
-                <td>Vestibulum</td>
-                <td>lacinia</td>
-                <td>arcu</td>
-            </tr>
-            <tr>
-                <td>1,011</td>
-                <td>eget</td>
-                <td>nulla</td>
-                <td>Class</td>
-                <td>aptent</td>
-            </tr>
-            <tr>
-                <td>1,012</td>
-                <td>taciti</td>
-                <td>sociosqu</td>
-                <td>ad</td>
-                <td>litora</td>
-            </tr>
-            <tr>
-                <td>1,013</td>
-                <td>torquent</td>
-                <td>per</td>
-                <td>conubia</td>
-                <td>nostra</td>
-            </tr>
-            <tr>
-                <td>1,014</td>
-                <td>per</td>
-                <td>inceptos</td>
-                <td>himenaeos</td>
-                <td>Curabitur</td>
-            </tr>
-            <tr>
-                <td>1,015</td>
-                <td>sodales</td>
-                <td>ligula</td>
-                <td>in</td>
-                <td>libero</td>
-            </tr>
+            {% endfor %}
             </tbody>
         </table>
     </div>
