--- a/business/templates/business/add_business.html
+++ b/business/templates/business/add_business.html
@@ -41,7 +41,7 @@
             </div>
             <div class="form-group radio_buttons optional">
 
-                <label class="radio_buttons optional col-sm-2 control-label">產業</label>
+                <label class="optional col-sm-2 control-label">產業</label>
                 <div class="col-sm-10">
                     <select class="string required form-control" name="industry">
                         <option value="資訊科技">資訊科技</option>
