--- a/partner/templates/partner/partner.html
+++ b/partner/templates/partner/partner.html
@@ -14,4 +14,48 @@
 {% endblock %}
 {% block content %}
     <h1 class="page-header">夥伴</h1>
+    <div class="row">
+        <div class="col-sm-9 col-lg-8 col-lg-offset-1">
+            <form accept-charset="UTF-8" action="/business/search" method="get">
+                <div style="display:none"><input name="utf8" type="hidden" value="✓"></div>
+                <div class="input-group">
+                    <input type="text" class="form-control" name="q" value="" placeholder="搜尋夥伴關鍵字...">
+                    <span class="input-group-btn">
+                      <button type="submit" class="btn btn-default">
+                          <span class="glyphicon glyphicon-search" style="font-size: 20px"></span>
+                      </button>
+                    </span>
+                </div>
+            </form>
+        </div>
+{#        <div class="col-sm-3 col-lg-2">#}
+{#            <a class="btn btn-primary btn-block" data-remote="true" href="/business/add_business/">發表一個偉大的計畫</a>#}
+{#        </div>#}
+    </div>
+
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>用戶</th>
+                <th>專長</th>
+                <th>地點</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for profile in profile_list %}
+                <tr>
+                    <td width="30%">
+{#                        {% if biz.was_published_recently %}#}
+{#                            <span class="label label-success">NEW</span>#}
+{#                        {% endif %}#}
+                        <a href="/partner/user_detail?id={{ profile.pk }}">{{ profile.username }}</a>
+                    </td>
+                    <td width="30%">{{ profile.skill_type }}</td>
+                    <td width="30%">{{ profile.location }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
