--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                             <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="#"><i class="fa fa-user fa-fw"></i>更改資料</a></li>
+                            <li><a href="/partner/view_profile/"><i class="fa fa-user fa-fw"></i>更改資料</a></li>
                             <li class="divider"></li>
                             <li><a href="/logout/"><i class="fa fa-sign-out fa-fw"></i>登出</a></li>
                         </ul>
@@ -34,9 +34,6 @@
                     </li>
                 </ul>
             {% endif %}
-            {#            <form class="navbar-form navbar-right">#}
-            {#                <input type="text" class="form-control" placeholder="搜尋...">#}
-            {#            </form>#}
         </div>
     </div>
 </nav>
@@ -57,3 +54,5 @@
 {% endblock %}
 </body>
 </html>
+{% block end_js %}
+{% endblock %}
