done all category

--- a/business/templates/business/business.html
+++ b/business/templates/business/business.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 {% block side_menu %}
     <ul class="nav nav-sidebar" id="menu">
-        <li class="active"><a href="#">全部 <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">資訊科技</a></li>
-        <li><a href="#">傳產製造</a></li>
-        <li><a href="#">工商服務</a></li>
-        <li><a href="#">餐飲服務</a></li>
-        <li><a href="#">民生服務</a></li>
-        <li><a href="#">文教傳播</a></li>
-        <li><a href="#">電子/半導體</a></li>
-        <li><a href="#">其他</a></li>
+        <li class="active"><a href="/business/">全部 <span class="sr-only">(current)</span></a></li>
+        <li><a href="/business/view_category/?type=資訊科技">資訊科技</a></li>
+        <li><a href="/business/view_category/?type=傳產製造">傳產製造</a></li>
+        <li><a href="/business/view_category/?type=工商服務">工商服務</a></li>
+        <li><a href="/business/view_category/?type=餐飲服務">餐飲服務</a></li>
+        <li><a href="/business/view_category/?type=民生服務">民生服務</a></li>
+        <li><a href="/business/view_category/?type=文教傳播">文教傳播</a></li>
+        <li><a href="/business/view_category/?type=電子/半導體">電子/半導體</a></li>
+        <li><a href="/business/view_category/?type=其他">其他</a></li>
     </ul>
 {% endblock %}
 {% block content %}
