--- a/business/templates/business/business_detail.html
+++ b/business/templates/business/business_detail.html
@@ -20,7 +20,7 @@
         <br>
         <div class="well">
             <h4> 聯絡資訊 </h4>
-            {{ contact_info }}
+            {{ biz.contact_info }}
         </div>
     </div>
 {% endblock %}
