1. ready to publish 2. Django admin css

--- a/business/templates/business/add_business.html
+++ b/business/templates/business/add_business.html
@@ -84,7 +84,7 @@
                     <div class="well">
                         {{ profile.contact_info }}
                     </div>
-                    <p class="help-block">只有你授權的用戶才看得到你的聯絡資訊</p>
+{#                    <p class="help-block">只有你授權的用戶才看得到你的聯絡資訊</p>#}
                 </div>
             </div>
             <hr>
