--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 
         <p>阿里巴巴集團主席馬雲，來台出席「2014兩岸企業家峰會」15日中午在專題演說時宣佈，希望能成立專屬基金，為台灣年輕人到中國去學習或創業提供協助，「給兩岸年輕人一些機會」</p>
 
-        <p>你也想創業嗎? 你準備好了嗎? 你有團隊了嗎? 你的團隊還缺專業人才嗎?</p>
+        <p>你也想創業嗎? 你準備好了嗎? 你有團隊了嗎? 你的團隊還缺專業人才嗎? 還是你的團隊缺乏資金呢?</p>
 
         {% if not user.is_authenticated %}
         <p><a class="btn btn-lg btn-success" href="/signup" role="button">註冊</a></p>
