--- a/business/templates/business/business.html
+++ b/business/templates/business/business.html
@@ -16,7 +16,7 @@
     <h1 class="page-header">事業</h1>
     <div class="row">
         <div class="col-sm-9 col-lg-8 col-lg-offset-1">
-            <form accept-charset="UTF-8" action="/business/search" method="get">
+            <form accept-charset="UTF-8" action="/business/search/" method="get">
                 <div style="display:none"><input name="utf8" type="hidden" value="✓"></div>
                 <div class="input-group">
                     <input type="text" class="form-control" name="q" value="" placeholder="搜尋事業關鍵字...">
