--- a/business/templates/business/business_detail.html
+++ b/business/templates/business/business_detail.html
@@ -7,20 +7,32 @@
             </a>
         </div>
         <h2> {{ biz.title }}</h2>
+
         <div class="group">
-            <span style="color:grey; font-weight:bold;"> <i class="glyphicon glyphicon-calendar"> </i> 刊登日期 {{ biz.pub_date }} </span>
+            <span style="color:grey; font-weight:bold;"> <i
+                    class="glyphicon glyphicon-calendar"> </i> 刊登日期 {{ biz.pub_date }} </span>
             &nbsp;&nbsp;&nbsp;&nbsp;
-            <span style="color:grey; font-weight:bold;"> <i class="glyphicon glyphicon-map-marker"></i> 地點 {{ biz.location }} </span>
+            <span style="color:grey; font-weight:bold;"> <i
+                    class="glyphicon glyphicon-map-marker"></i> 地點 {{ biz.location }} </span>
             &nbsp;&nbsp;&nbsp;&nbsp;
         </div>
         <hr>
-        <div>
-            {{ biz.content | safe}}
+        <div class="panel panel-info">
+            <div class="panel-heading">{{ biz.industry }}</div>
+            <div class="panel-body">
+                {{ biz.content | safe }}
+            </div>
         </div>
         <br>
-        <div class="well">
-            <h4> 聯絡資訊 </h4>
-            {{ biz.contact_info }}
+        <div class="panel panel-warning">
+            <div class="panel-heading">聯絡資訊</div>
+            <div class="panel-body">
+                {% if user.is_authenticated %}
+                    {{ biz.contact_info }}
+                {% else %}
+                    登入後查看
+                {% endif %}
+            </div>
         </div>
     </div>
 {% endblock %}
