--- a/partner/templates/partner/partner.html
+++ b/partner/templates/partner/partner.html
@@ -9,6 +9,7 @@
         <li><a href="/partner/view_category/?type=醫療專業">醫療專業</a></li>
         <li><a href="/partner/view_category/?type=資訊專業">資訊專業</a></li>
         <li><a href="/partner/view_category/?type=電子/半導體">電子/半導體</a></li>
+        <li><a href="/partner/view_category/?type=資金夥伴">資金夥伴</a></li>
         <li><a href="/partner/view_category/?type=其他">其他</a></li>
     </ul>
 {% endblock %}
@@ -16,7 +17,7 @@
     <h1 class="page-header">夥伴</h1>
     <div class="row">
         <div class="col-sm-9 col-lg-8 col-lg-offset-1">
-            <form accept-charset="UTF-8" action="/business/search" method="get">
+            <form accept-charset="UTF-8" action="/partner/search" method="get">
                 <div style="display:none"><input name="utf8" type="hidden" value="✓"></div>
                 <div class="input-group">
                     <input type="text" class="form-control" name="q" value="" placeholder="搜尋夥伴關鍵字...">
