--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,17 +6,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">創業夥伴網</a>
+    <a class="navbar-brand" href="/">創業夥伴網</a>
 </div>
 <div id="navbar" class="navbar-collapse collapse">
     {% if user.is_authenticated %}
         <ul class="nav navbar-nav navbar-right" style="font-size: 20px">
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
+                    <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"> {{ user.username }} </i>
                 </a>
                 <ul class="dropdown-menu dropdown-user">
-                    <li><a href="/partner/view_profile/"><i class="fa fa-user fa-fw"></i>更改資料</a></li>
+                    <li><a href="/partner/view_profile/"><i class="fa fa-pencil-square fa-fw"></i>更改資料</a></li>
                     <li class="divider"></li>
                     <li><a href="/logout/"><i class="fa fa-sign-out fa-fw"></i>登出</a></li>
                 </ul>
