--- a/templates/signup.html
+++ b/templates/signup.html
@@ -53,7 +53,7 @@
 
 <footer>
     <div class="container">
-        <p>&copy; Srinivas Tamada Production</p>
+        <p>© 2015 startup-partner inc. all right reserved. beta</p>
     </div>
 </footer>
 </body>
