--- a/business/templates/business/business.html
+++ b/business/templates/business/business.html
@@ -29,7 +29,11 @@
             </form>
         </div>
         <div class="col-sm-3 col-lg-2">
+            {% if user.is_authenticated %}
             <a class="btn btn-primary btn-block" data-remote="true" href="/business/add_business/">發表一個偉大的計畫</a>
+            {% else %}
+                <a class="btn btn-primary btn-block" data-remote="true" href="/signup/">註冊後可以發表你偉大的計畫</a>
+            {% endif %}
         </div>
     </div>
 
