--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,18 +3,14 @@
 {% include "head.html" %}
 <body>
 
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+        {% include "navbar.html" %}
+    </div>
+</nav>
+
 <div class="container">
     <div class="row">
-{#        <div class="span8">#}
-{#            <div class="alert alert-success">#}
-{#                Well done! You successfully read this important alert message.#}
-{#            </div>#}
-{#            <div class="alert alert-danger alert-dismissible" role="alert">#}
-{#                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span#}
-{#                        aria-hidden="true">&times;</span></button>#}
-{#                <strong>Warning!</strong> Better check yourself, you're not looking too good.#}
-{#            </div>#}
-{#        </div>#}
         <legend>輸入註冊資料</legend>
         <div class="row">
             <div class="col-md-4 col-md-offset-3">
