--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,9 @@
-<html lang="en">
-<header>
+<html>
+<head>
     {% include "head.html" %}
     {% block ext_js %}
     {% endblock %}
-</header>
+</head>
 <body>
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
