--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
-<html lang="en">
-<header>
+<html>
+<head>
 {% include "head.html" %}
-</header>
+</head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
