--- a/templates/head.html
+++ b/templates/head.html
@@ -1,7 +1,7 @@
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=big5">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="創業,夥伴,合夥,股東,技術">
+    <meta name="keywords" content="創業,夥伴,合夥,股東,技術">
     <meta name="author" content="">
 
     <title>創業夥伴網</title>
