facebook, google plus

--- a/templates/head.html
+++ b/templates/head.html
@@ -1,7 +1,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=big5">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="創業,夥伴,合夥,股東,技術">
-    <meta name="keywords" content="創業,夥伴,合夥,股東,技術">
+    <meta name="description" content="創業,夥伴,合夥,股東,技術,創業點子,技術夥伴,合作夥伴">
+    <meta name="keywords" content="創業,夥伴,合夥,股東,技術,創業點子,技術夥伴,合作夥伴">
     <meta name="author" content="">
 
     <title>創業夥伴網</title>
@@ -32,3 +32,8 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    {#    google plus  #}
+    <script src="https://apis.google.com/js/platform.js" async defer>
+        {lang: 'zh-TW'}
+    </script>
