--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -35,5 +35,10 @@
             <button type="submit" class="btn btn-success">登入</button>
         </form>
     {% endif %}
+    {#    facebook    #}
+{#    <div class="fb-like" style="margin-top: 15px" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>#}
+    <div class="fb-like" style="margin-top: 15px" data-href="https://developers.facebook.com/docs/plugins/" data-width="300" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
+    <!-- google plus  -->
+    <div class="g-plusone" data-annotation="none" data-href="http://startup-partner.appspot.com/"></div>
 </div>
 <!--/.navbar-collapse -->
